<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">

    <Button
        android:id="@+id/lgbt"
        android:layout_width="110dp"
        android:layout_height="59dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="116dp"
        android:backgroundTint="#FFAB40"
        android:backgroundTintMode="src_over"
        android:rotation="-90"
        android:rotationX="0"
        android:rotationY="0"
        android:text="@string/LGBT"
        app:icon="@drawable/menu_weather_icon_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnWriteText"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textTitleManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/connected_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitleManual">

        <SeekBar
            android:id="@+id/pixelXBar"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/PixelX"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:text="@string/PixelX"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="365dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <SeekBar
            android:id="@+id/pixelYBar"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/PixelY"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:text="@string/PixelY"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/pick_color_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pick_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="409dp"
        android:layout_height="79dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:text="@string/selectec_color"
            android:textSize="18sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <View
            android:id="@+id/preview_selected_color"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/send_pixel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pick_color_button"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnWriteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSend"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/clear_matrix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWriteText"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/matrixText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/send_text_hint"
        android:inputType="textPersonName"
        android:maxLength="19"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btnWriteText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnWeatherAPI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#448AFF"
        android:rotation="-90"
        android:text="@string/WeatherAPI"
        app:iconTint="#448AFF"
        app:layout_constraintBottom_toTopOf="@+id/matrixText"
        app:layout_constraintStart_toEndOf="@+id/buttonSend"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>