<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".weatherAPI.weatherAPI">

    <ImageView
        android:id="@+id/btnResearch"
        android:layout_width="64dp"
        android:layout_height="73dp"
        android:contentDescription="@string/buttonResearch"
        android:onClick="@{() -> mainViewModel.setOnSearchbtnClick()}"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/textCity"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textCity"
        app:srcCompat="@drawable/ic_baseline_search_24" />

    <TextView
        android:id="@+id/header_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/myweather"
        android:textAlignment="center"
        android:textSize="38.69sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textCity"
        android:layout_width="310dp"
        android:layout_height="79dp"
        android:layout_marginStart="28dp"
        android:hint="@string/weatherTextInputHint"
        android:inputType="textShortMessage"
        android:text="@={mainViewModel.location}"
        app:layout_constraintEnd_toStartOf="@+id/btnResearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title2"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnReturn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/returnButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconWeather"
        android:layout_width="78dp"
        android:layout_height="67dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/iconDescription"
        android:src="@drawable/ic_baseline_cloud_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCity" />

</androidx.constraintlayout.widget.ConstraintLayout>